Partial fix for navbar spacing

--- a/public_html/main.css
+++ b/public_html/main.css
@@ -73,6 +73,7 @@ body {
 	color: var(--main-colour);
 	max-width: 75em;
 	margin: auto;
+	margin-top: 1em;
 	padding: 1em;
 	border-radius: 0.5em;
 }
@@ -135,6 +136,7 @@ input[type=submit] {
 	border: none;
 	padding: 1em;
 	position: fixed;
+	top: 0;
 	width: 100%;
 }
 
